# QuickVLC-example

./: CMakeLists.txt  main.cpp  main.qml
cmake/: FindLIBVLC.cmake
